--- a/src/styles/note-editor.scss
+++ b/src/styles/note-editor.scss
@@ -6,33 +6,26 @@
   @include rect-subtle-box-shadow;
 
   position: relative;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.825); // 1 - (1 - 0.65) * (1 - 0.5)
 
   width: 100%;
   height: 100%;
   max-width: 600px;
+  max-height: 100%;
 
   padding: 10px;
 
   display: flex;
   flex-direction: column;
 
-  &:before {
-    @include rect-border-radius;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    content: '';
-    background-color: rgba(255, 255, 255, 0.65);
-  }
-
   .note-name {
     @include list-title;
     position: relative;
     font-size: 20px;
     margin-bottom: 4px;
+
+    height: 24px;
+    min-height: 24px;
 
     &:focus {
       outline: 0;
@@ -48,6 +41,7 @@
     position: relative;
     background-color: white;
     padding: 4px;
+    overflow: scroll;
 
     &:focus {
       outline: 0;
